<resources>
    <string name="app_name">PLATE RECOGNITION</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="login">Login</string>
    <string name="scan_plate">SCAN PLATE</string>
    <string name="register">Register</string>
    <string name="title_activity_addclient">addclient</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_details">details</string>
    <string name="customer_details">Customer details</string>
    <string name="car_details">Car details</string>
    <string name="parking_type">Parking type</string>
    <string name="next">NEXT</string>
    <string name="name">Name</string>
    <string name="telephone_number">Telephone_Number</string>
    <string name="national_id">National ID</string>
    <string name="number_plate">Number Plate</string>
    <string name="model">Model</string>
    <string name="colour">Colour</string>
    <string name="registered">Registered</string>
    <string name="motor_bike">Motor bike</string>
    <string name="disable">Disable</string>
    <string name="regular">Regular</string>
    <string name="save">SAVE</string>
    <string name="new_member">New MEMBER</string>

    <string name="save1">SAVE</string>
    <string name="savee">SAVE</string>
    <string name="savve">SAVE</string>
    <string name="saave">SAVE</string>
    <string name="event">event</string>
    <string name="logout">LOGOUT</string>
    <string name="number_platee">Number_Plate</string>
    <string name="modell">Model</string>
    <string name="color">Color</string>
    <string name="members">MEMBERS</string>
    <string name="view">View</string>
    <string name="car">Toyota</string>
    <string name="type">type</string>
    <string name="logs">Logs</string>
    <string name="date">Date</string>
    <string name="kaa567">kaa567</string>
</resources>
